Perbaikan reveal.js

--- a/demo.html
+++ b/demo.html
@@ -400,7 +400,7 @@
 				</section>
 
 				<section>
-					<h2>Global State</h2>
+					<h2>Global Sta</h2>
 					<p>
 						Set <code>data-state="something"</code> on a slide and <code>"something"</code>
 						will be added as a class to the document element when the slide is open. This lets you
