--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
-		<title>reveal.js</title>
+		<title>181112540_Nur Habibullah Arwi_Latihan reveal.js</title>
 
 		<link rel="stylesheet" href="dist/reset.css">
 		<link rel="stylesheet" href="dist/reveal.css">
@@ -16,8 +16,44 @@
 	<body>
 		<div class="reveal">
 			<div class="slides">
-				<section>Slide 1</section>
-				<section>Slide 2</section>
+				<section data-background-color="rgb(255, 166, 77)">
+					<section>
+						<a href="https://id.linkedin.com">
+							<img src="https://upload.wikimedia.org/wikipedia/commons/0/01/LinkedIn_Logo.svg" alt="reveal.js logo" style="height: 180px; margin: 0 auto 4rem auto; background: transparent;" class="demo-logo">
+						</a>
+						<h3 style=" font-size: 35px;">Disusun Oleh : Nur Habibullah Arwi - 181112540</h3>
+						<p>
+							<small style="font-size: 35px;">SC A Pagi </a></small>
+						</p>
+					</section>
+				</section>
+
+				<section>
+						<section data-background-color="rgb(255, 166, 77)">
+							<h3>Deskripsi umum perusahaan</h3>
+							<p style="font-size: 25px;">LinkedIn adalah media sosial yang dapat Anda gunakan untuk menemukan pekerjaan atau tempat magang yang tepat, menghubungkan dan memperkuat hubungan profesional Anda. Selain itu, melalui LinkedIn, Anda juga bisa mempelajari beragam keterampilan yang Anda butuhkan agar karir Anda lebih sukses ke depan. LinkedIn adalah situs web jaringan sosial yang berorientasi bisnis, terutama digunakan untuk jaringan profesional. Sampai April 2018 Linkedin menyatakan memiliki lebih dari 546 juta pengguna di lebih dari 200 negara dan wilayah di seluruh dunia, meliputi 150 industri dan lebih dari 400 bidang ekonomi yang diklasifikasi menurut jasanya.
+							</p>
+
+					</section>
+			
+
+					<section data-background-color="rgb(255, 166, 77)">
+							<p style="font-size: 25px;">LinkedIn dimulai di ruang tamu pendirinya, Reid Hoffman, pada tahun 2002 dan diluncurkan secara resmi pada 5 Mei 2003. Sedangkan CEO LinkedIn saat ini adalah Jeff Weiner, dengan manajemen yang terdiri dari eksekutif berpengalaman dari perusahaan seperti Yahoo!, Google, Microsoft, TiVo, PayPal, dan Electronic Arts. LinkedIn menjalankan bisnis yang terdiversifikasi, dengan sumber pendapatan dari langganan keanggotaan, penjualan iklan, dan solusi perekrutan.
+							</p>
+					</section>
+
+					<section data-background-color="rgb(255, 166, 77)">
+						<p style="font-size: 25px;">Pada Desember 2016, Microsoft merampungkan akuisisinya terhadap LinkedIn, menggabungkan layanan cloud profesional terdepan di dunia dengan jaringan profesional terdepan di dunia.</p>
+					</section>
+				</section>
+
+				<section>
+					<section data-background-color="rgb(255, 166, 77)">
+						<h3>Manfaat atau Alasan Perusahaan tersebut menggunakan Node.Js</h3>
+						<p style="font-size: 25px;">LinkedIn berubah teknologi dari Rubi ke Node.js . Dengan melakukan itu, mereka mengurangi jumlah server mereka dari 30 menjadi 3. Jadi, mereka mengurangi kebutuhan mereka hingga 90% berkat perubahan teknologi ini. Dan semenjak Linkedin beralih dari Ruby on Rails ke Nodejs dalam Backend mereka, aplikasi Android mereka menjadi 2-10 kali lebih cepat dan lebih light dari sebelumnya.</p>
+					</section>
+				</section>
+
 			</div>
 		</div>
 
@@ -35,6 +71,11 @@
 				// Learn about plugins: https://revealjs.com/plugins/
 				plugins: [ RevealMarkdown, RevealHighlight, RevealNotes ]
 			});
+
+			Reveal.initialize({ 
+				slideNumber: 'C' 
+			});
+
 		</script>
 	</body>
 </html>
