--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
-		<title>Tugas kelompok tim deadline</title>
+		<title>Tugas kelompok Tim Deadline</title>
 
 		<link rel="stylesheet" href="dist/reset.css">
 		<link rel="stylesheet" href="dist/reveal.css">
@@ -16,12 +16,14 @@
 	<body>
 		<div class="reveal">
 			<div class="slides">
-				<section data-background-color="rgb(255, 166, 77)">
+				<section data-background-color="rgb(255,255,255)">
 					<section>
-						<a href="https://id.linkedin.com">
-							<img src="https://upload.wikimedia.org/wikipedia/commons/0/01/LinkedIn_Logo.svg" alt="reveal.js logo" style="height: 180px; margin: 0 auto 4rem auto; background: transparent;" class="demo-logo">
-						</a>
-						<h3 style=" font-size: 35px;">Disusun Oleh : Nur Habibullah Arwi - 181112540</h3>
+						<h3>APLIKASI PENYEWAAN GEDUNG SERBAGUNA BERBASIS WEB
+						</h3>
+							<img src="Logo.png" height="350px">
+
+						<h3 style=" font-size: 35px;">Disusun Oleh : Tim Deadline 
+
 						<p>
 							<small style="font-size: 35px;">SC A Pagi </a></small>
 						</p>
@@ -30,8 +32,8 @@
 
 				<section>
 						<section data-background-color="rgb(255, 166, 77)">
-							<h3>Deskripsi umum perusahaan</h3>
-							<p style="font-size: 25px;">LinkedIn adalah media sosial yang dapat Anda gunakan untuk menemukan pekerjaan atau tempat magang yang tepat, menghubungkan dan memperkuat hubungan profesional Anda. Selain itu, melalui LinkedIn, Anda juga bisa mempelajari beragam keterampilan yang Anda butuhkan agar karir Anda lebih sukses ke depan. LinkedIn adalah situs web jaringan sosial yang berorientasi bisnis, terutama digunakan untuk jaringan profesional. Sampai April 2018 Linkedin menyatakan memiliki lebih dari 546 juta pengguna di lebih dari 200 negara dan wilayah di seluruh dunia, meliputi 150 industri dan lebih dari 400 bidang ekonomi yang diklasifikasi menurut jasanya.
+							<h3>Latar Belakang Proyek</h3>
+							<p>
 							</p>
 
 					</section>
