--- a/index.html
+++ b/index.html
@@ -33,28 +33,21 @@
 				<section>
 						<section data-background-color="rgb(255, 166, 77)">
 							<h3>Latar Belakang Proyek</h3>
-							<p>
-							</p>
+							<p>Banyak terdapat gedung serbaguna yang ada di kota medan.Sebagai tempat untuk acara, gedung serba guna ini memiliki Beberapa fasilitas digabungkan menjadi satu unit untuk mengatur Kegiatan tertentu, tetapi informasi tentang fasilitas dan paket yang ditawarkan Tidak banyak digunakan, sehingga penyewa bingung saat menentukan pilihan gedung serbaguna untuk meminimalisir kesalahan dalam pemilihan gedung Serba guna.</p>
 
+							
 					</section>
 			
 
 					<section data-background-color="rgb(255, 166, 77)">
-							<p style="font-size: 25px;">LinkedIn dimulai di ruang tamu pendirinya, Reid Hoffman, pada tahun 2002 dan diluncurkan secara resmi pada 5 Mei 2003. Sedangkan CEO LinkedIn saat ini adalah Jeff Weiner, dengan manajemen yang terdiri dari eksekutif berpengalaman dari perusahaan seperti Yahoo!, Google, Microsoft, TiVo, PayPal, dan Electronic Arts. LinkedIn menjalankan bisnis yang terdiversifikasi, dengan sumber pendapatan dari langganan keanggotaan, penjualan iklan, dan solusi perekrutan.
+							<p>Operasional sistem reservasi gedung serbaguna membantu penyewa dengan informasi jadwal gedung Serbaguna, lihat harga, fasilitas, paket, barang yang ditawarkan.</p>
+
 							</p>
 					</section>
 
-					<section data-background-color="rgb(255, 166, 77)">
-						<p style="font-size: 25px;">Pada Desember 2016, Microsoft merampungkan akuisisinya terhadap LinkedIn, menggabungkan layanan cloud profesional terdepan di dunia dengan jaringan profesional terdepan di dunia.</p>
-					</section>
 				</section>
 
-				<section>
-					<section data-background-color="rgb(255, 166, 77)">
-						<h3>Manfaat atau Alasan Perusahaan tersebut menggunakan Node.Js</h3>
-						<p style="font-size: 25px;">LinkedIn berubah teknologi dari Rubi ke Node.js . Dengan melakukan itu, mereka mengurangi jumlah server mereka dari 30 menjadi 3. Jadi, mereka mengurangi kebutuhan mereka hingga 90% berkat perubahan teknologi ini. Dan semenjak Linkedin beralih dari Ruby on Rails ke Nodejs dalam Backend mereka, aplikasi Android mereka menjadi 2-10 kali lebih cepat dan lebih light dari sebelumnya.</p>
-					</section>
-				</section>
+				
 
 			</div>
 		</div>
