--- a/index.html
+++ b/index.html
@@ -47,6 +47,14 @@
 
 				</section>
 
+				<section>
+						<section data-background-color="rgb(255, 166, 77)">
+							<h3>Tujuan Proyek</h3>
+							<p>Tujuan pada proyek perancangan sistem aplikasi penyewaan gedung serbaguna untuk membantu Penyewa dapat menampilkan gedung-gedung serbaguna yang kosong berdasarkan tanggal sehingga penyewa dapat menetukan pemesanan gedung serbaguna dan fasilitas nya tanpa harus mendatangi gedung-gedung untuk mendapatkan informasi jadwal gedung, serta mempromosikan gedung - gedung serbaguna yang ada di kota medan ini. </p>
+
+					</section>
+
+				</section>
 				
 
 			</div>
