--- a/index.html
+++ b/index.html
@@ -55,6 +55,16 @@
 					</section>
 
 				</section>
+
+
+				<section>
+						<section data-background-color="rgb(255, 166, 77)">
+							<h3>Desain Website Halaman Utama</h3>
+							<img src="Web 1280 – 1.jpg">
+
+					</section>
+
+				</section>
 				
 
 			</div>
