Desain daftar gedung

--- a/index.html
+++ b/index.html
@@ -66,6 +66,14 @@
 
 				</section>
 				
+				<section>
+						<section data-background-color="rgb(255, 166, 77)">
+							<h3>Desain Daftar Gedung</h3>
+							<img src="Web 1280 – 2.jpg">
+
+					</section>
+
+				</section>
 
 			</div>
 		</div>
