Jadwal Pemesanan Gedung

--- a/index.html
+++ b/index.html
@@ -75,6 +75,15 @@
 
 				</section>
 
+				<section>
+						<section data-background-color="rgb(255, 166, 77)">
+							<h3>Desain Jadwal Pemesanan Gedung</h3>
+							<img src="Web 1280 – 3.jpg">
+
+					</section>
+
+				</section>
+
 			</div>
 		</div>
 
