Desain Fasilitas Tambahan Gedung

--- a/index.html
+++ b/index.html
@@ -84,6 +84,15 @@
 
 				</section>
 
+				<section>
+						<section data-background-color="rgb(255, 166, 77)">
+							<h3>Desain Fasilitas Tambahan Gedung</h3>
+							<img src="Web 1280 – 4.jpg">
+
+					</section>
+
+				</section>
+
 			</div>
 		</div>
 
