Desain History Pemesanan

--- a/index.html
+++ b/index.html
@@ -93,6 +93,15 @@
 
 				</section>
 
+				<section>
+						<section data-background-color="rgb(255, 166, 77)">
+							<h3>Desain History Pemesanan Gedung</h3>
+							<img src="Web 1280 – 5.jpg">
+
+					</section>
+
+				</section>
+
 			</div>
 		</div>
 
