ganti warna Background

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 				</section>
 
 				<section>
-						<section data-background-color="rgb(255, 166, 77)">
+						<section data-background-color="rgb(192,192,192)">
 							<h3>Latar Belakang Proyek</h3>
 							<p>Banyak terdapat gedung serbaguna yang ada di kota medan.Sebagai tempat untuk acara, gedung serba guna ini memiliki Beberapa fasilitas digabungkan menjadi satu unit untuk mengatur Kegiatan tertentu, tetapi informasi tentang fasilitas dan paket yang ditawarkan Tidak banyak digunakan, sehingga penyewa bingung saat menentukan pilihan gedung serbaguna untuk meminimalisir kesalahan dalam pemilihan gedung Serba guna.</p>
 
@@ -39,7 +39,7 @@
 					</section>
 			
 
-					<section data-background-color="rgb(255, 166, 77)">
+					<section data-background-color="rgb(192,192,192)">
 							<p>Operasional sistem reservasi gedung serbaguna membantu penyewa dengan informasi jadwal gedung Serbaguna, lihat harga, fasilitas, paket, barang yang ditawarkan.</p>
 
 							</p>
@@ -48,7 +48,7 @@
 				</section>
 
 				<section>
-						<section data-background-color="rgb(255, 166, 77)">
+						<section data-background-color="rgb(192,192,192)">
 							<h3>Tujuan Proyek</h3>
 							<p>Tujuan pada proyek perancangan sistem aplikasi penyewaan gedung serbaguna untuk membantu Penyewa dapat menampilkan gedung-gedung serbaguna yang kosong berdasarkan tanggal sehingga penyewa dapat menetukan pemesanan gedung serbaguna dan fasilitas nya tanpa harus mendatangi gedung-gedung untuk mendapatkan informasi jadwal gedung, serta mempromosikan gedung - gedung serbaguna yang ada di kota medan ini. </p>
 
@@ -58,7 +58,7 @@
 
 
 				<section>
-						<section data-background-color="rgb(255, 166, 77)">
+						<section data-background-color="rgb(192,192,192)">
 							<h3>Desain Website Halaman Utama</h3>
 							<img src="Web 1280 – 1.jpg">
 
@@ -67,7 +67,7 @@
 				</section>
 				
 				<section>
-						<section data-background-color="rgb(255, 166, 77)">
+						<section data-background-color="rgb(192,192,192)">
 							<h3>Desain Daftar Gedung</h3>
 							<img src="Web 1280 – 2.jpg">
 
@@ -76,7 +76,7 @@
 				</section>
 
 				<section>
-						<section data-background-color="rgb(255, 166, 77)">
+						<section data-background-color="rgb(192,192,192)">
 							<h3>Desain Jadwal Pemesanan Gedung</h3>
 							<img src="Web 1280 – 3.jpg">
 
@@ -85,7 +85,7 @@
 				</section>
 
 				<section>
-						<section data-background-color="rgb(255, 166, 77)">
+						<section data-background-color="rgb(192,192,192)">
 							<h3>Desain Fasilitas Tambahan Gedung</h3>
 							<img src="Web 1280 – 4.jpg">
 
@@ -94,7 +94,7 @@
 				</section>
 
 				<section>
-						<section data-background-color="rgb(255, 166, 77)">
+						<section data-background-color="rgb(192,192,192)">
 							<h3>Desain History Pemesanan Gedung</h3>
 							<img src="Web 1280 – 5.jpg">
 
